# org-defuddle

./: .gitignore  AGENTS.md  Cargo.toml  README.org  org-defuddle.el
.github/workflows/: release.yml
crates/org-defuddle-cli/: Cargo.toml
crates/org-defuddle-cli/src/: main.rs
crates/org-defuddle-core/: Cargo.toml
crates/org-defuddle-core/src/: lib.rs  partial_selectors.rs
crates/org-defuddle-core/tests/: upstream_fixtures.rs
crates/org-defuddle-module/: Cargo.toml
scripts/: defuddle-reference.mjs
test/: org-defuddle-test.el
tests/expected-org/: author-contact-block.org  author-share-widget.org  callouts--obsidian-publish-callouts.org  code-blocks--chroma-linenums.org  code-blocks--hexo-br.org  codeblocks--chatgpt-codemirror.org  codeblocks--chroma-inline-linenums.org  codeblocks--chroma-line-spans.org  codeblocks--code-pre-nesting.org  codeblocks--flex-row-gutter.org  codeblocks--hljs-header.org  codeblocks--mintlify.org  codeblocks--pygments-lineno.org  codeblocks--react-syntax-highlighter-linenums.org  codeblocks--rehype-pretty-code.org  codeblocks--rehype-pretty-copy.org  codeblocks--rockthejvm.com-articles-kotlin-101-type-classes.org  codeblocks--rouge-linenums.org  codeblocks--stripe.org  comments--mastodon.social-@user-12345678.org  comments--news.ycombinator.com-item-id=12345678.org  comments--old.reddit.com-r-test-comments-abc123-test_post.org  content-patterns--card-grid-stripped-headings.org  content-patterns--code-block-boilerplate-and-trailing-section.org  content-patterns--content-list-with-internal-links.org  elementor--archive-page.org  (+175 more)
(+2 files in other folders)
