[package]
name = "org-defuddle-core"
version = "0.1.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
kuchiki = "0.8"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "=2.5.2"
